* (bug 11331) Add buildConcat() and use CASE not IF for DB compatibility. Make oldimage 
  cascade delete via image table for Postgres, change fa_storage_key TEXT.
* (bug 11438) Live Preview chops returned text
* Show the right message on account creation when the user is blocked
* (bug 11450) Fix creation of objectcache table on upgrade


=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

* (bug 11275) Enable descending sort in categorymembers
* (bug 11308) Allow the API to output the image metadata
* (bug 11296) Temporary fix for escaping of ampersands inside links in pretty-printed
  help document.
* (bug 11405) Expand templates implementation in the API
* (bug 11218) Add option to feedwatchlist to display multiple revisions for each page.
* (bug 11404) Provide name of exception caught in error code field of internal api 
  error messages.

=== Languages updated in 1.12 ===

* Amharic (am) (new)
* Arabic (ar)
* Mapudungun (arn) (new)
* Asturian (ast)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Catalan (ca)
* Breton (br)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Ewe (ee) (new)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Võro (fiu-vro)
* Frisian (fy)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Irish (ga)
* Gön-gnŷ (gan) (new)
* Galician (gl)
* Ancient Greek (grc) (new)
* Hakka (hak)
* Hebrew (he)
* Upper Sorbian (hsb)
* Indonesian (id)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Kazakh (kk)
* Korean (ko)
* Latin (la)
* Limbugian (li)
* Malay (ms)
* Low Saxon (nds)
* Dutch (nl)
* Norwegian (no)
* Portugese (pt)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)
* Seri (sei) (new)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sundanese (su)
* Tamil (ta)